# pps4-trace

./: #doclist.txt#  README.md  doclist.txt  doclist.txt~  fp-info-cache
dasm/: a.out  pps4dis.c
disasm/: a.out  pps4dis.c  pps4dis.tcl
example_code/: from_reset_3900.txt  patent1.txt
pps4-trace-1/: inputs.sch-bak  ppstrace1-cache.lib  ppstrace1.kicad_pcb  ppstrace1.kicad_pcb-bak  ppstrace1.pro  ppstrace1.sch  ppstrace1.sch-bak
rom-dumper/firmware/: CMakeLists.txt  flash_code.sh  pps4-rom-dumper.c
simulator/: pps4-920-3-dump-all-roms.romdata  pps4-920-3-dump-all-roms.romdata.lst  rockwell_920_simulator.tcl  rockwell_920_simulator.tcl~  runsim  sim.out
test1/: test1.ino
traces/: #decoded_trace1.txt#  .#romdata.lst.annotated  .#romdump2_working_920_3_2.txt.romdata.lst.annotated  .gitignore  allfiles.romdata  allfiles.romdata.lst  allfiles.romdata.romdata  allfiles.romdata.romdata.lst  amalgamate_lst_files.tcl  amalgamated.rom  async1_annotated  async_capture_1.txt  async_capture_2.txt  async_capture_3.txt  convert_romdump_to_romdata.tcl  dec1  decoded_trace1.txt  decoded_trace1.txt~  disasm_romdata.tcl  from_reset_1.txt  from_reset_2.txt  from_reset_3.txt  from_reset_3400.txt  from_reset_3500.txt  from_reset_3600.txt  from_reset_3800.txt  from_reset_3900_2.txt  from_reset_4200.txt  from_reset_5000.txt  from_reset_6600.txt  from_reset_6600_2.txt  from_reset_6600_3.txt  from_reset_6700.txt  from_reset_6700_1.txt  from_reset_6900.txt  from_reset_7000.txt  from_reset_listing.txt  graph_rom_accesses.tcl  new_romdata.tcl  original.romdata.lst  (+32 more)
(+105 files in other folders)
